--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -1,4 +1,7 @@
 {
     "enchantment.bns.worthyweapon"  :  "Worthy",
-    "enchantment.bns.worthytool"    :   "Worthy"
+    "enchantment.bns.worthytool"    :   "Worthy",
+    "enchantment.bns.pinnedweapon"  :   "Pinned",
+    "enchantment.bns.pinnedtool"    :   "Pinned",
+    "effect.bns.paralysis"          :   "Paralysis"
 }
