Implemented Lightning Enchantment & Bugfixes

--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -3,5 +3,9 @@
     "enchantment.bns.worthytool"    :   "Worthy",
     "enchantment.bns.pinnedweapon"  :   "Pinned",
     "enchantment.bns.pinnedtool"    :   "Pinned",
+    "enchantment.bns.frostweapon"   :   "Frost Imbued",
+    "enchantment.bns.frostwtool"    :   "Frost Imbued",
+    "enchantment.bns.flameweapon"   :   "Flame Imbued",
+    "enchantment.bns.flametool"     :   "Flame Imbued",
     "effect.bns.paralysis"          :   "Paralysis"
 }
