added sounds and adjust particle effects

--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -7,5 +7,7 @@
     "enchantment.bns.frostwtool"    :   "Frost Imbued",
     "enchantment.bns.flameweapon"   :   "Flame Imbued",
     "enchantment.bns.flametool"     :   "Flame Imbued",
+    "enchantment.bns.lightningtool" :   "Lightning Imbued",
+    "enchantment.bns.lightningweapon" :   "Lightning Imbued",
     "effect.bns.paralysis"          :   "Paralysis"
 }
