Translation issue fix and Frost/Flame issue fixed

--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -4,7 +4,7 @@
     "enchantment.bns.pinnedweapon"  :   "Pinned",
     "enchantment.bns.pinnedtool"    :   "Pinned",
     "enchantment.bns.frostweapon"   :   "Frost Imbued",
-    "enchantment.bns.frostwtool"    :   "Frost Imbued",
+    "enchantment.bns.frosttool"    :   "Frost Imbued",
     "enchantment.bns.flameweapon"   :   "Flame Imbued",
     "enchantment.bns.flametool"     :   "Flame Imbued",
     "enchantment.bns.lightningtool" :   "Lightning Imbued",
