Added config file and throw enchantment

--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -9,6 +9,8 @@
     "enchantment.bns.flametool"     :   "Flame Imbued",
     "enchantment.bns.lightningtool" :   "Lightning Imbued",
     "enchantment.bns.lightningweapon" :   "Lightning Imbued",
+    "enchantment.bns.throwweapon" :   "Throwing",
+    "enchantment.bns.throwtool" :   "Throwing",
     "effect.bns.paralysis"          :   "Paralysis",
     "key.bns.actionkey"        : "Throw Key",
     "category.bns.keys"             : "Brok N Sindri"
