Brok Lives! Also fixed new entityhit bug

--- a/src/main/resources/assets/bns/lang/en_us.json
+++ b/src/main/resources/assets/bns/lang/en_us.json
@@ -13,5 +13,6 @@
     "enchantment.bns.throwtool" :   "Throwing",
     "effect.bns.paralysis"          :   "Paralysis",
     "key.bns.actionkey"        : "Throw Key",
-    "category.bns.keys"             : "Brok N Sindri"
+    "category.bns.keys"             : "Brok N Sindri",
+    "item.bns.brok_spawn_egg"   :   "Brok Spawn Egg"
 }
